@@ -1,6 +1,6 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.google.common.collect.ImmutableList;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,16 +14,15 @@ import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.enums.ActionType;
 import uk.gov.hmcts.reform.fpl.enums.CMOStatus;
 import uk.gov.hmcts.reform.fpl.enums.Event;
+import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.CaseManagementOrder;
-import uk.gov.hmcts.reform.fpl.model.HearingBooking;
 import uk.gov.hmcts.reform.fpl.model.OrderAction;
-import uk.gov.hmcts.reform.fpl.model.Respondent;
-import uk.gov.hmcts.reform.fpl.model.RespondentParty;
-import uk.gov.hmcts.reform.fpl.model.common.Element;
-import uk.gov.hmcts.reform.fpl.service.DateFormatterService;
+import uk.gov.hmcts.reform.fpl.utils.ElementUtils;
 import uk.gov.service.notify.NotificationClient;
+import uk.gov.service.notify.NotificationClientException;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -33,105 +32,159 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
-import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
-import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.CMO_READY_FOR_JUDGE_REVIEW_NOTIFICATION_TEMPLATE;
+import static uk.gov.hmcts.reform.fpl.NotifyTemplates.CMO_REJECTED_BY_JUDGE_TEMPLATE;
 import static uk.gov.hmcts.reform.fpl.enums.ActionType.JUDGE_REQUESTED_CHANGE;
 import static uk.gov.hmcts.reform.fpl.enums.ActionType.SEND_TO_ALL_PARTIES;
 import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.SELF_REVIEW;
 import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.SEND_TO_JUDGE;
 import static uk.gov.hmcts.reform.fpl.enums.CaseManagementOrderKeys.CASE_MANAGEMENT_ORDER_JUDICIARY;
-import static uk.gov.hmcts.reform.fpl.enums.CaseManagementOrderKeys.CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY;
-import static uk.gov.hmcts.reform.fpl.enums.CaseManagementOrderKeys.SERVED_CASE_MANAGEMENT_ORDERS;
 import static uk.gov.hmcts.reform.fpl.enums.Event.ACTION_CASE_MANAGEMENT_ORDER;
 import static uk.gov.hmcts.reform.fpl.enums.Event.DRAFT_CASE_MANAGEMENT_ORDER;
-import static uk.gov.hmcts.reform.fpl.service.HearingBookingService.HEARING_DETAILS_KEY;
+import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createHearingBookings;
+import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createRespondents;
+import static uk.gov.hmcts.reform.fpl.utils.EmailNotificationHelper.formatCaseUrl;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(CaseManagementOrderProgressionController.class)
 @OverrideAutoConfiguration(enabled = true)
 class CaseManagementOrderProgressionControllerTest extends AbstractControllerTest {
+    private static final UUID uuid = randomUUID();
+    private static final String LOCAL_AUTHORITY_CODE = "example";
+    private static final String LOCAL_AUTHORITY_EMAIL_ADDRESS = "local-authority@local-authority.com";
+    private static final String FAMILY_MAN_CASE_NUMBER = "SACCCCCCCC5676576567";
+
+    private static final Long caseId = 12345L;
+    private final LocalDateTime testDate = LocalDateTime.of(2020, 2, 1, 12, 30);
+
     @MockBean
     private NotificationClient notificationClient;
 
     @Autowired
-    private DateFormatterService dateFormatterService;
-
-    private static final UUID uuid = randomUUID();
-    private static final Long CASE_ID = 12345L;
-    private static final String CASE_REFERENCE = "12345";
-    private static final String LOCAL_AUTHORITY_CODE = "example";
-    private static final String FAMILY_MAN_CASE_NUMBER = "SACCCCCCCC5676576567";
-    private static final String RESPONDENT_SURNAME = "Watson";
-    private static final LocalDateTime YESTERDAY = LocalDateTime.now().minusDays(1);
+    private ObjectMapper mapper;
 
     CaseManagementOrderProgressionControllerTest() {
         super("cmo-progression");
     }
 
     @Test
-    void aboutToSubmitReturnCaseManagementOrdersToLocalAuthorityWhenChangesAreRequested() {
-        CaseManagementOrder order = buildOrder(SEND_TO_JUDGE, JUDGE_REQUESTED_CHANGE);
+    void aboutToSubmitReturnsCaseManagementOrdersToLocalAuthorityWhenChangesAreRequested()
+        throws NotificationClientException {
+
+        CaseManagementOrder order = CaseManagementOrder.builder()
+            .status(SEND_TO_JUDGE)
+            .action(OrderAction.builder()
+                .type(JUDGE_REQUESTED_CHANGE)
+                .changeRequestedByJudge("Please make this change XYZ")
+                .build())
+            .build();
+
+        CaseDetails caseDetails = buildCaseDetails(order, ACTION_CASE_MANAGEMENT_ORDER);
+
+        CaseData caseDataBefore = mapper.convertValue(caseDetails.getData(), CaseData.class);
+        AboutToStartOrSubmitCallbackResponse response = postAboutToSubmitEvent(
+            buildCallbackRequest(caseDetails, ACTION_CASE_MANAGEMENT_ORDER));
+        CaseData responseData = mapper.convertValue(response.getData(), CaseData.class);
+
+        assertThat(responseData.getCaseManagementOrder().getStatus()).isEqualTo(SELF_REVIEW);
+        cmoCommonAssertions(responseData, caseDataBefore);
+
+        verify(notificationClient).sendEmail(
+            eq(CMO_REJECTED_BY_JUDGE_TEMPLATE), eq(LOCAL_AUTHORITY_EMAIL_ADDRESS),
+            eq(expectedJudgeRejectedNotificationParameters()), eq(caseId.toString()));
+    }
+
+    private void cmoCommonAssertions(CaseData responseData, CaseData caseDataBefore) {
+        assertThat(responseData.getHearingDetails()).isEqualTo(caseDataBefore.getHearingDetails());
+        assertThat(responseData.getRespondents1()).isEqualTo(caseDataBefore.getRespondents1());
+        assertThat(responseData.getCaseLocalAuthority()).isEqualTo(caseDataBefore.getCaseLocalAuthority());
+        assertThat(responseData.getFamilyManCaseNumber()).isEqualTo(caseDataBefore.getFamilyManCaseNumber());
+    }
+
+    @Test
+    void aboutToSubmitShouldNotNotifyLocalAuthorityWhenChangesAreNotRequested()
+        throws NotificationClientException {
+
+        CaseManagementOrder order = buildOrder(SEND_TO_JUDGE, ActionType.SELF_REVIEW);
 
         CaseDetails caseDetails = CaseDetails.builder()
+            .id(12345L)
             .data(Map.of(CASE_MANAGEMENT_ORDER_JUDICIARY.getKey(), order))
             .build();
 
-        AboutToStartOrSubmitCallbackResponse response = postAboutToSubmitEvent(buildCallbackRequest(caseDetails,
-            ACTION_CASE_MANAGEMENT_ORDER));
+        postAboutToSubmitEvent(buildCallbackRequest(caseDetails, ACTION_CASE_MANAGEMENT_ORDER));
 
-        assertThat(response.getData()).containsOnlyKeys(CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey());
+        verify(notificationClient, never()).sendEmail(
+            eq(CMO_REJECTED_BY_JUDGE_TEMPLATE), eq(LOCAL_AUTHORITY_EMAIL_ADDRESS),
+            eq(expectedJudgeRejectedNotificationParameters()), eq(caseId.toString()));
     }
 
     @Test
     void aboutToSubmitShouldPopulateListServedCaseManagementOrdersWhenSendsToAllParties() {
         CaseManagementOrder order = buildOrder(SEND_TO_JUDGE, SEND_TO_ALL_PARTIES);
 
-        CaseDetails caseDetails = CaseDetails.builder()
-            .data(caseDataMap(order))
-            .build();
+        CaseDetails caseDetails = buildCaseDetails(order, ACTION_CASE_MANAGEMENT_ORDER);
 
+        CaseData caseDataBefore = mapper.convertValue(caseDetails.getData(), CaseData.class);
         AboutToStartOrSubmitCallbackResponse response = postAboutToSubmitEvent(buildCallbackRequest(caseDetails,
             ACTION_CASE_MANAGEMENT_ORDER));
+        CaseData responseData = mapper.convertValue(response.getData(), CaseData.class);
 
-        assertThat(response.getData())
-            .containsOnlyKeys(SERVED_CASE_MANAGEMENT_ORDERS.getKey(), HEARING_DETAILS_KEY);
+        List<CaseManagementOrder> expectedServedCMOs = new ArrayList<>();
+        expectedServedCMOs.add(order);
+
+        assertThat(ElementUtils.unwrapElements(responseData.getServedCaseManagementOrders())).isEqualTo(
+            expectedServedCMOs);
+        cmoCommonAssertions(responseData, caseDataBefore);
     }
 
     @Test
     void aboutToSubmitShouldSendNotificationWhenStatusIsSendToJudge() throws Exception {
         CaseManagementOrder order = buildOrder(SEND_TO_JUDGE, SEND_TO_ALL_PARTIES);
 
-        CaseDetails caseDetails = CaseDetails.builder()
-            .data(ImmutableMap.<String, Object>builder()
-                .putAll(caseDataMap(order))
-                .putAll(getNotificationData())
-                .build())
-            .id(CASE_ID)
-            .build();
+        CaseDetails caseDetails = buildCaseDetails(order, DRAFT_CASE_MANAGEMENT_ORDER);
 
         postAboutToSubmitEvent(buildCallbackRequest(caseDetails, DRAFT_CASE_MANAGEMENT_ORDER));
 
         verify(notificationClient).sendEmail(
             eq(CMO_READY_FOR_JUDGE_REVIEW_NOTIFICATION_TEMPLATE), eq("admin@family-court.com"),
-            eq(expectedTemplateParameters()), eq(CASE_REFERENCE));
+            eq(expectedCMODraftCompleteNotificationParameters()), eq(caseId.toString()));
     }
 
     @Test
     void aboutToSubmitShouldNotSendNotificationWhenStatusIsNotSendToJudge() throws Exception {
         CaseManagementOrder order = buildOrder(SELF_REVIEW, SEND_TO_ALL_PARTIES);
 
-        CaseDetails caseDetails = CaseDetails.builder()
-            .data(ImmutableMap.<String, Object>builder()
-                .putAll(caseDataMap(order))
-                .build())
-            .build();
+        CaseDetails caseDetails = buildCaseDetails(order, DRAFT_CASE_MANAGEMENT_ORDER);
 
         postAboutToSubmitEvent(buildCallbackRequest(caseDetails, DRAFT_CASE_MANAGEMENT_ORDER));
 
         verify(notificationClient, never()).sendEmail(
             eq(CMO_READY_FOR_JUDGE_REVIEW_NOTIFICATION_TEMPLATE), eq("admin@family-court.com"),
-            eq(expectedTemplateParameters()), eq(CASE_REFERENCE));
+            eq(expectedCMODraftCompleteNotificationParameters()), eq(caseId.toString()));
+    }
+
+    private Map<String, Object> expectedJudgeRejectedNotificationParameters() {
+        return ImmutableMap.<String, Object>builder()
+            .putAll(commonNotificationParameters())
+            .put("requestedChanges", "Please make this change XYZ")
+            .build();
+    }
+
+    private Map<String, Object> expectedCMODraftCompleteNotificationParameters() {
+        return ImmutableMap.<String, Object>builder()
+            .putAll(commonNotificationParameters())
+            .put("respondentLastName", "Jones")
+            .build();
+    }
+
+    private Map<String, Object> commonNotificationParameters() {
+        final String subjectLine = "Jones, SACCCCCCCC5676576567," + " hearing 1 Feb 2020";
+        return ImmutableMap.<String, Object>builder()
+            .put("subjectLineWithHearingDate", subjectLine)
+            .put("reference", caseId.toString())
+            .put("caseUrl", formatCaseUrl("http://fake-url", caseId))
+            .build();
     }
 
     private CaseManagementOrder buildOrder(CMOStatus status, ActionType actionType) {
@@ -144,31 +197,16 @@ class CaseManagementOrderProgressionControllerTest extends AbstractControllerTes
             .build();
     }
 
-    private Map<String, Object> caseDataMap(CaseManagementOrder order) {
-        return ImmutableMap.of(
-            CASE_MANAGEMENT_ORDER_JUDICIARY.getKey(), order,
-            HEARING_DETAILS_KEY, List.of(Element.<HearingBooking>builder()
-                .id(uuid)
-                .value(HearingBooking.builder()
-                    .startDate(YESTERDAY)
-                    .build())
-                .build()));
-    }
-
-    private Map<String, Object> getNotificationData() {
-        return ImmutableMap.of(
-            "cmoEventId", "draftCMO",
-            "caseLocalAuthority", LOCAL_AUTHORITY_CODE,
-            "familyManCaseNumber", FAMILY_MAN_CASE_NUMBER,
-            "respondents1", ImmutableList.of(
-                    ImmutableMap.of(
-                    "value", Respondent.builder()
-                        .party(RespondentParty.builder()
-                            .lastName(RESPONDENT_SURNAME)
-                            .build())
-                        .build()
-                    ))
-        );
+    private CaseDetails buildCaseDetails(CaseManagementOrder order, Event cmoEvent) {
+        return CaseDetails.builder()
+            .id(12345L)
+            .data(Map.of(CASE_MANAGEMENT_ORDER_JUDICIARY.getKey(), order,
+                "cmoEventId", cmoEvent.getId(),
+                "hearingDetails", createHearingBookings(testDate, testDate.plusHours(4)),
+                "respondents1", createRespondents(),
+                "caseLocalAuthority", LOCAL_AUTHORITY_CODE,
+                "familyManCaseNumber", FAMILY_MAN_CASE_NUMBER))
+            .build();
     }
 
     private CallbackRequest buildCallbackRequest(CaseDetails caseDetails, Event event) {
@@ -176,21 +214,5 @@ class CaseManagementOrderProgressionControllerTest extends AbstractControllerTes
             .eventId(event.getId())
             .caseDetails(caseDetails)
             .build();
-    }
-
-    private Map<String, Object> expectedTemplateParameters() {
-        return ImmutableMap.<String, Object>builder()
-            .put("subjectLineWithHearingDate", buildSubjectLine())
-            .put("reference", CASE_REFERENCE)
-            .put("respondentLastName", RESPONDENT_SURNAME)
-            .put("caseUrl", "http://fake-url/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
-            .build();
-    }
-
-    private String buildSubjectLine() {
-        String hearingDate = dateFormatterService
-            .formatLocalDateTimeBaseUsingFormat(YESTERDAY, "d MMM yyyy");
-
-        return String.format("%s, %s, hearing %s", RESPONDENT_SURNAME, FAMILY_MAN_CASE_NUMBER, hearingDate);
     }
 }
